Fix width in button on mobile version

--- a/src/components/DataEntry/dataEntry.scss
+++ b/src/components/DataEntry/dataEntry.scss
@@ -46,7 +46,7 @@
     }
 
     .button {
-      width: 45%;
+      width: 47%;
       margin: 8px 0 0 0;
     }
 
@@ -58,6 +58,9 @@
 }
 @media (max-width: $phone) {
   .data-entry {
+    .button {
+      width: 48.5%;
+    }
     &:before {
       margin-right: 4px;
       top: 68px;
